--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>DECOBLOG</title>
   <script src="https://kit.fontawesome.com/16749ecba0.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href ="./css/reset.css"></link>
   <link rel="stylesheet" href ="./css/layout.css"></link>
