--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DECOBLOG</title>
   <script src="https://kit.fontawesome.com/16749ecba0.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href ="./css/reset.css"></link>
-  <link rel="stylesheet" href ="./css/layout.css"></link>
-  <link rel="stylesheet" href ="./css/style.css"></link>
+  <link rel="stylesheet" href ="./css/reset.css"/>
+  <link rel="stylesheet" href ="./css/layout.css"/>
+  <link rel="stylesheet" href ="./css/style.css"/>
 </head>
 <body>
   <header>
@@ -21,7 +21,7 @@
       </div>
       <div class = "right-wrapper">
         <div class = "logo-image">
-          <img src = "./images/page-icon.png" alt = "page-icon" width = 100% height = 100%>
+          <img src = "./images/page-icon.png" alt = "page-icon" >
         </div>
         <ul class = "social-media-link">
           <li><a href = "#"><i class="fas fa-wifi header-icon"></i></a></li>
@@ -62,7 +62,7 @@
         <form method = "post" id = "signUpForm">
           <input type = "text" name = "name" placeholder = "Your Name" class = "name-input"/>
           <input type = "email" name = "email" placeholder = "Your Email Address" class = "name-input"/>
-          <input type = "submit" value = "SUBSCRIBE"></input>
+          <input type = "submit" value = "SUBSCRIBE"/>
         </form>
       </div>
 
@@ -85,7 +85,7 @@
               <i class="fab fa-pinterest-p"></i>
             </div>
             <div class = "blog-image-wrapper">
-              <img src = "./images/travel.png" height= 100% width = 100% alt='travel-img'/>
+              <img src = "./images/travel.png" alt='travel-img'/>
             </div>
             <div class = "bottom-icon-wrapper">
               <i class="far fa-image"></i>
@@ -141,22 +141,22 @@
               <div class = "img-left">
                 <div class = "img-left-l">
                   <div class = "half-image">
-                    <img src = "./images/grid-1.png" width=100% height=100% alt = "grid-1">
+                    <img src = "./images/grid-1.png" alt = "grid-1">
                   </div>
                   <div class = "half-image">
-                    <img src = "./images/grid-2.png" width=100% height=100% alt="grid-2">
+                    <img src = "./images/grid-2.png" alt="grid-2">
                   </div>
                 </div>
                 <div class = "img-left-r">
-                  <img src = "./images/grid-3.png" width=100% height=100% alt="grid-3">
+                  <img src = "./images/grid-3.png" alt="grid-3">
                 </div>
               </div>
               <div class = "img-right">
                 <div class = "half-image">
-                  <img src = "./images/grid-4.png" width=100% height=100% alt= "grid-4">
+                  <img src = "./images/grid-4.png" alt= "grid-4">
                 </div>
                 <div class = "half-image">
-                  <img src = "./images/grid-5.png" width=100% height=100% alt="grid-5">
+                  <img src = "./images/grid-5.png" alt="grid-5">
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
           <div class = "blog-wrapper">
 
             <div class = "video-wrapper">
-              <video width=100% height=100% controls>
+              <video controls>
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
@@ -389,7 +389,7 @@
             </button>
           </div>
           <div class = "top-add-banner">
-            <img src = "./images/top-add-banner.png" width = 100% height = 100% alt = "first-ad-banner"/>
+            <img src = "./images/top-add-banner.png" alt = "first-ad-banner"/>
           </div>
           <div class = "category-wrapper">
             <span class = "title">CATEGORIES</span>
@@ -439,7 +439,7 @@
             </ul>
           </div>
           <div class= "second-add-banner">
-            <img src ="./images/second-ad-baner.png" width = 100% height = 100% alt = 'second-add-banner'/>
+            <img src ="./images/second-ad-baner.png" alt = 'second-add-banner'/>
           </div>
           <div class = "latest-post-wrapper">
             <span class ="title">LATEST POST</span>
@@ -447,7 +447,7 @@
               <li>
                 <a href = "#">
                   <div class = "post-img-wrapper">
-                    <img src = "./images/post-1.png" height = 100% width =100% alt = "post-1"/>
+                    <img src = "./images/post-1.png" alt = "post-1"/>
                   </div>
                   <div class = "post-details-wrapper">
                     <span class = "post-detail-title">
@@ -470,7 +470,7 @@
               <li>
                 <a href = "#">
                   <div class = "post-img-wrapper">
-                    <img src = "./images/post-2.png" height = 100% width =100% alt = "post-2"/>
+                    <img src = "./images/post-2.png" alt = "post-2"/>
                   </div>
                   <div class = "post-details-wrapper">
                     <span class = "post-detail-title">
@@ -493,7 +493,7 @@
               <li>
                 <a href = "#">
                   <div class = "post-img-wrapper">
-                    <img src = "./images/post-3.png" height = 100% width =100% alt = "post-3"/>
+                    <img src = "./images/post-3.png" alt = "post-3"/>
                   </div>
                   <div class = "post-details-wrapper">
                     <span class = "post-detail-title">
@@ -516,7 +516,7 @@
               <li>
                 <a href = "#">
                   <div class = "post-img-wrapper">
-                    <img src = "./images/post-4.png" height = 100% width =100% alt="post-4"/>
+                    <img src = "./images/post-4.png" alt="post-4"/>
                   </div>
                   <div class = "post-details-wrapper">
                     <span class = "post-detail-title">
@@ -574,7 +574,7 @@
 
           </div>
           <div class = "facebook-wrapper">
-            <img src = "./images/facebook-api-img.png" height=100% width=100% alt = "facebook-api"/>
+            <img src = "./images/facebook-api-img.png" alt = "facebook-api"/>
           </div>
         </div>
       </div>
@@ -595,7 +595,7 @@
                 that a reader will be distracted
               </p>
               <div class = "signature-wrapper">
-                <img src = "./images/signeture-image.png" width= 100% height = 100%/>
+                <img src = "./images/signeture-image.png" alt = 'signature img'/>
               </div>
             </div>
           </div>
@@ -647,29 +647,29 @@
               <ul class = "instagram-images-list">
                 <li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li><li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li>
                 <li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li>
                 <li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li><li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li><li>
                   <div class = "instagram-image-wrapper">
-                    <img src = "./images/insta-3.png" width= 100% height=100% alt="insta-1"/>
+                    <img src = "./images/insta-3.png" alt="insta-1"/>
                   </div>
                 </li>
               </ul>
